gitops/workloads/manifests/linkwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: linkwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkwarden
    spec:
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.5.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /data/data
              name: linkwarden-data
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              memory: 500Mi
      volumes:
        - name: linkwarden-data
          persistentVolumeClaim:
            claimName: linkwarden-data
