gitops/workloads/manifests/linkwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: linkwarden
