gitops/workloads/manifests/linkwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
  annotations:
    gethomepage.dev/description: Bookmark & Article Management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Social
    gethomepage.dev/icon: linkwarden.png
    gethomepage.dev/name: Linkwarden
spec:
  rules:
    - host: "linkwarden.bodkys.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: linkwarden
                port:
                  name: http
